# rust-cli

./: .gitignore  Cargo.toml  cargo-build.sh  install.ps1  install.sh
Install Scripts/: install.ps1  install.sh
src/: main.rs
src/commands/: copy_file.rs  find_file.rs  find_pattern_file.rs  mod.rs  move_file.rs  open_file.rs  read_file.rs
testing/: file.txt  file2.txt
