[package]
name = "rust-cli"
version = "0.1.0"
edition = "2024"
keywords = ["cli", "search", "demo"]
categories = ["command-line-utilities"]
authors = ["cyberschwabs@gmail.com"]
description = "A tool to search, open, and read files"
readme = "README.md"

[dependencies]
clap = { version = "4.5.53", features = ["derive"] }
anyhow = "1.0.100"
human-panic = "2.0.4"
opener = "0.8.3"
walkdir = "2.5.0"
tokio = { version = "1.48.0", features = ["full"] }
